
 zenTrack is a top quality, simple, and elegant
 tracking system for small to medium-large companies.
 Clean, simple interface, fully adaptable administration,
 object oriented and database abstracted design lend to 
 endless possibilities for project expansion. 

----- V2.5 (in development) ----

2004-08-11, cfalonso
  Stored value wasn't correctly selected in custom_menu fields. Fixed.
    - zentrack_2/includes/headerInc.php 1.38

2004-08-11, Kato
  Testing and debugging for 2.5 release(Ticket #66 is dev tracker)
    - zentrack_2/includes/templates/behaviorAdd.php 1.2
    - zentrack_2/includes/templates/behaviorDetailForm.php 1.4
    - zentrack_2/includes/templates/behaviorForm.php 1.3
    - zentrack_2/includes/templates/behaviorMenu.php 1.1
    - zentrack_2/includes/templates/binForm.php 1.8
    - zentrack_2/includes/templates/configForm.php 1.8
    - zentrack_2/includes/templates/editCustomsForm.php 1.6
    - zentrack_2/includes/templates/groupForm.php 1.7
    - zentrack_2/www/behavior_js.php 1.4
    - zentrack_2/www/admin/behaviors.php 1.3
    - zentrack_2/www/admin/editBehavior.php 1.3
    - zentrack_2/www/admin/editBehaviorDetails.php 1.3
    - zentrack_2/www/admin/editBehaviorSubmit.php 1.2

2004-08-11, cfalonso
  Updated database scripts for release 2.5
    - zentrack_2/install/UPGRADE_mssqlserver.sql
    - zentrack_2/install/UPGRADE_mysql.sql
    - zentrack_2/install/UPGRADE_oracle.sql
    - zentrack_2/install/build_mssqlserver.sql
    - zentrack_2/install/build_mysql.sql
    - zentrack_2/install/build_oracle.sql
    - zentrack_2/install/seed_mssqlserver.sql
    - zentrack_2/install/seed_mysql.sql
    - zentrack_2/install/seed_oracle.sql

2004-08-09, cfalonso
  Default group for menu-type custom fields was not shown correctly. Fixed.
    - zentrack_2/includes/templates/editCustomsForm.php 1.5
  Fixed a problem that happened when pressing MORE in behaviorDetailForm.php
    - zentrack_2/includes/templates/behaviorDetailForm.php 1.3

2004-08-07, Kato