@@ -255,6 +255,7 @@ CREATE TABLE ZENTRACK_BEHAVIOR (
   is_enabled NUMBER(1),
   sort_order NUMBER(3),
   field_name varchar2(100),
+  field_enabled NUMBER(1),
   match_all NUMBER(1),
   CONSTRAINT behavior_pk PRIMARY KEY (behavior_id)
 );
@@ -272,6 +273,8 @@ CREATE TABLE ZENTRACK_GROUP (
   table_name varchar2(50) NOT NULL,
   group_name varchar2(100),
   descript varchar2(255),
+  eval_type VARCHAR2(10),
+  eval_text VARCHAR2(4000),
   CONSTRAINT group_pk PRIMARY KEY (group_id)
 );
 
